Bug 301852 - Change coding style for all Buckminster code