@@ -125,367 +125,327 @@ import org.osgi.framework.InvalidSyntaxException;
  * @author Karel Brezina
  * 
  */
-public class QueryEditor extends EditorPart implements IEditorMatchingStrategy
-{
-	class AdvisorNodeLabelProvider extends LabelProvider implements ITableLabelProvider
-	{
-		public Image getColumnImage(Object element, int columnIndex)
-		{
+public class QueryEditor extends EditorPart implements IEditorMatchingStrategy {
+	class AdvisorNodeLabelProvider extends LabelProvider implements ITableLabelProvider {
+		public Image getColumnImage(Object element, int columnIndex) {
 			return null;
 		}
 
-		public String getColumnText(Object element, int columnIndex)
-		{
-			AdvisorNodeBuilder node = (AdvisorNodeBuilder)element;
+		public String getColumnText(Object element, int columnIndex) {
+			AdvisorNodeBuilder node = (AdvisorNodeBuilder) element;
 			String lbl;
-			switch(columnIndex)
-			{
-			case 0:
-				lbl = node.getNamePattern() == null
-						? "" : node.getNamePattern().toString(); //$NON-NLS-1$
-				break;
-			case 1:
-				lbl = node.getComponentTypeID();
-				break;
-			case 2:
-				lbl = node.getFilter() == null
-						? "" : node.getFilter().toString(); //$NON-NLS-1$
-				break;
-			default:
-				lbl = null;
+			switch (columnIndex) {
+				case 0:
+					lbl = node.getNamePattern() == null ? "" : node.getNamePattern().toString(); //$NON-NLS-1$
+					break;
+				case 1:
+					lbl = node.getComponentTypeID();
+					break;
+				case 2:
+					lbl = node.getFilter() == null ? "" : node.getFilter().toString(); //$NON-NLS-1$
+					break;
+				default:
+					lbl = null;
 			}
 			return lbl;
 		}
 	}
 
-	class CheckboxSelectionListener extends SelectionAdapter
-	{
-		private Control[] m_controlsToEnable;
+	class CheckboxSelectionListener extends SelectionAdapter {
+		private Control[] controlsToEnable;
 
-		public CheckboxSelectionListener(Control[] controlsToEnable)
-		{
-			m_controlsToEnable = controlsToEnable;
+		public CheckboxSelectionListener(Control[] controlsToEnable) {
+			this.controlsToEnable = controlsToEnable;
 		}
 
 		@Override
-		public void widgetSelected(SelectionEvent e)
-		{
-			Button button = (Button)e.widget;
+		public void widgetSelected(SelectionEvent e) {
+			Button button = (Button) e.widget;
 			boolean enable = button.getSelection();
 
-			for(Control control : m_controlsToEnable)
-			{
+			for (Control control : controlsToEnable) {
 				control.setEnabled(enable);
 			}
 		}
 	}
 
-	class CompoundModifyListener implements VersionDesignatorListener, ModifyListener, PropertiesModifyListener,
-			SelectionListener
-	{
+	class CompoundModifyListener implements VersionDesignatorListener, ModifyListener, PropertiesModifyListener, SelectionListener {
 
-		public void modifyProperties(PropertiesModifyEvent e)
-		{
-			if(!m_suppressModifyListener)
+		public void modifyProperties(PropertiesModifyEvent e) {
+			if (!suppressModifyListener)
 				setDirty(true);
 		}
 
-		public void modifyText(ModifyEvent e)
-		{
-			if(!m_suppressModifyListener)
+		public void modifyText(ModifyEvent e) {
+			if (!suppressModifyListener)
 				setDirty(true);
 		}
 
-		public void modifyVersionDesignator(VersionDesignatorEvent e)
-		{
-			if(!m_suppressModifyListener)
+		public void modifyVersionDesignator(VersionDesignatorEvent e) {
+			if (!suppressModifyListener)
 				setDirty(true);
 		}
 
-		public void widgetDefaultSelected(SelectionEvent e)
-		{
+		public void widgetDefaultSelected(SelectionEvent e) {
 		}
 
-		public void widgetSelected(SelectionEvent e)
-		{
-			if(!m_suppressModifyListener)
+		public void widgetSelected(SelectionEvent e) {
+			if (!suppressModifyListener)
 				setDirty(true);
 		}
 	}
 
-	private static final IActivator EMPTY_ACTIVATOR = new IActivator()
-	{
+	private static final IActivator EMPTY_ACTIVATOR = new IActivator() {
 
-		public void activate()
-		{
+		public void activate() {
 			// nothing to activate
 		}
 	};
 
 	private final static int DONT_SAVE = -99;
 
-	private CTabFolder m_tabFolder;
+	private CTabFolder tabFolder;
 
-	private Text m_componentName;
+	private Text componentName;
 
-	private Combo m_componentType;
+	private Combo componentType;
 
-	private VersionDesignator m_versionDesignator;
+	private VersionDesignator versionDesignator;
 
-	private ComponentQueryBuilder m_componentQuery;
+	private ComponentQueryBuilder componentQuery;
 
-	private Button m_enableOverride;
+	private Button enableOverride;
 
-	private boolean m_hasChanges;
+	private boolean hasChanges;
 
-	private Button m_resolveButton;
+	private Button resolveButton;
 
-	private Button m_materializeButton;
+	private Button materializeButton;
 
-	private Button m_externalSaveAsButton;
+	private Button externalSaveAsButton;
 
-	private Button m_moveDownButton;
+	private Button moveDownButton;
 
-	private Button m_moveUpButton;
+	private Button moveUpButton;
 
-	private boolean m_mute;
+	private boolean mute;
 
-	private Combo m_mutableLevel;
+	private Combo mutableLevel;
 
-	private Text m_namePattern;
+	private Text namePattern;
 
-	private Text m_filter;
+	private Text filter;
 
-	private Combo m_category;
+	private Combo category;
 
-	private Text m_overlayFolder;
+	private Text overlayFolder;
 
-	private Button m_overlayBrowseButton;
+	private Button overlayBrowseButton;
 
-	private Text m_wantedAttributes;
+	private Text wantedAttributes;
 
-	private Button m_prune;
+	private Button prune;
 
-	private boolean m_needsRefresh;
+	private boolean needsRefresh;
 
-	private Button m_newButton;
+	private Button newButton;
 
-	private TableViewer m_nodeTable;
+	private TableViewer nodeTable;
 
-	private Button m_removeButton;
+	private Button removeButton;
 
-	private Button m_requestURLCheckbox;
+	private Button requestURLCheckbox;
 
-	private Text m_requestURL;
+	private Text requestURL;
 
-	private Button m_propertyURLCheckbox;
+	private Button propertyURLCheckbox;
 
-	private Text m_propertyURL;
+	private Text propertyURL;
 
-	private Tree m_nodeTree;
+	private Tree nodeTree;
 
-	private Combo m_sourceLevel;
+	private Combo sourceLevel;
 
-	private Button m_skipComponent;
+	private Button skipComponent;
 
-	private Button m_allowCircular;
+	private Button allowCircular;
 
-	private Composite m_nodesStackComposite;
+	private Composite nodesStackComposite;
 
-	private StackLayout m_nodesStackLayout;
+	private StackLayout nodesStackLayout;
 
-	private HashMap<String, Control> m_nodesHash;
+	private HashMap<String, Control> nodesHash;
 
-	private Button m_useTargetPlatform;
+	private Button useTargetPlatform;
 
-	private Button m_useWorkspace;
+	private Button useWorkspace;
 
-	private Button m_useMaterialization;
+	private Button useMaterialization;
 
-	private Button m_useResolutionService;
+	private Button useResolutionService;
 
-	private Text m_branchTagPath;
+	private Text branchTagPath;
 
-	private Text m_timestamp;
+	private Text timestamp;
 
-	private Text m_revision;
+	private Text revision;
 
-	private VersionDesignator m_versionOverride;
+	private VersionDesignator versionOverride;
 
-	private boolean m_continueOnError;
+	private boolean continueOnError;
 
-	private Properties m_nodeProperties;
+	private Properties nodeProperties;
 
-	private Text m_nodeDocumentation;
+	private Text nodeDocumentation;
 
-	private Properties m_properties;
+	private Properties properties;
 
-	private Text m_shortDesc;
+	private Text shortDesc;
 
-	private Text m_documentation;
+	private Text documentation;
 
-	private CTabItem m_xmlTab;
+	private CTabItem xmlTab;
 
-	private Text m_xml;
+	private Text xml;
 
-	private CompoundModifyListener m_compoundModifyListener;
+	private CompoundModifyListener compoundModifyListener;
 
-	private final SimpleDateFormat m_timestampFormat = (SimpleDateFormat)DateFormat.getDateTimeInstance(
-			DateFormat.SHORT, DateFormat.SHORT);
+	private final SimpleDateFormat timestampFormat = (SimpleDateFormat) DateFormat.getDateTimeInstance(DateFormat.SHORT, DateFormat.SHORT);
 
-	private int m_lastSelectedNode = -1;
+	private int lastSelectedNode = -1;
 
-	private int m_lastEditedNode = -1;
+	private int lastEditedNode = -1;
 
-	private boolean m_suppressModifyListener = false;
+	private boolean suppressModifyListener = false;
 
-	public String commitChanges(IComponentRequest[] requestRet)
-	{
-		String name = UiUtils.trimmedValue(m_componentName);
-		if(name == null)
+	public String commitChanges(IComponentRequest[] requestRet) {
+		String name = UiUtils.trimmedValue(componentName);
+		if (name == null)
 			return Messages.the_component_must_have_a_name;
 
-		String category = null;
-		int idx = m_componentType.getSelectionIndex();
-		if(idx >= 0)
-		{
-			category = m_componentType.getItem(idx);
-			if(category.length() == 0)
-				category = null;
+		String componentCategory = null;
+		int idx = componentType.getSelectionIndex();
+		if (idx >= 0) {
+			componentCategory = componentType.getItem(idx);
+			if (componentCategory.length() == 0)
+				componentCategory = null;
 		}
-		requestRet[0] = new ComponentRequest(name, category, m_versionDesignator.getVersionDesignator());
+		requestRet[0] = new ComponentRequest(name, componentCategory, versionDesignator.getVersionDesignator());
 		return null;
 	}
 
 	@Override
-	public void createPartControl(Composite parent)
-	{
+	public void createPartControl(Composite parent) {
 		Composite topComposite = new Composite(parent, SWT.NONE);
 		GridLayout layout = new GridLayout(1, true);
 		layout.marginHeight = layout.marginWidth = 0;
 		topComposite.setLayout(layout);
 
-		m_tabFolder = new CTabFolder(topComposite, SWT.BOTTOM);
-		m_tabFolder.setLayoutData(new GridData(SWT.FILL, SWT.FILL, true, true));
+		tabFolder = new CTabFolder(topComposite, SWT.BOTTOM);
+		tabFolder.setLayoutData(new GridData(SWT.FILL, SWT.FILL, true, true));
 
-		final CTabItem mainTab = new CTabItem(m_tabFolder, SWT.NONE);
+		final CTabItem mainTab = new CTabItem(tabFolder, SWT.NONE);
 		mainTab.setText(Messages.main);
-		mainTab.setControl(getMainTabControl(m_tabFolder));
+		mainTab.setControl(getMainTabControl(tabFolder));
 
-		final CTabItem advisorTab = new CTabItem(m_tabFolder, SWT.NONE);
+		final CTabItem advisorTab = new CTabItem(tabFolder, SWT.NONE);
 		advisorTab.setText(Messages.advisor_nodes);
-		advisorTab.setControl(getAdvisorTabControl(m_tabFolder));
+		advisorTab.setControl(getAdvisorTabControl(tabFolder));
 
-		CTabItem propertiesTab = new CTabItem(m_tabFolder, SWT.NONE);
+		CTabItem propertiesTab = new CTabItem(tabFolder, SWT.NONE);
 		propertiesTab.setText(Messages.properties);
-		propertiesTab.setControl(getPropertiesTabControl(m_tabFolder));
+		propertiesTab.setControl(getPropertiesTabControl(tabFolder));
 
-		CTabItem documentationTab = new CTabItem(m_tabFolder, SWT.NONE);
+		CTabItem documentationTab = new CTabItem(tabFolder, SWT.NONE);
 		documentationTab.setText(Messages.documentation);
-		documentationTab.setControl(getDocumentationTabControl(m_tabFolder));
+		documentationTab.setControl(getDocumentationTabControl(tabFolder));
 
-		m_xmlTab = new CTabItem(m_tabFolder, SWT.NONE);
-		m_xmlTab.setText(Messages.xml_content);
-		m_xmlTab.setControl(getXMLTabControl(m_tabFolder));
+		xmlTab = new CTabItem(tabFolder, SWT.NONE);
+		xmlTab.setText(Messages.xml_content);
+		xmlTab.setControl(getXMLTabControl(tabFolder));
 
-		m_tabFolder.addPaintListener(new PaintListener()
-		{
-			public void paintControl(PaintEvent e)
-			{
-				if(m_tabFolder.getSelection() == null)
-					m_tabFolder.setSelection(0);
+		tabFolder.addPaintListener(new PaintListener() {
+			public void paintControl(PaintEvent e) {
+				if (tabFolder.getSelection() == null)
+					tabFolder.setSelection(0);
 			}
 		});
 
-		m_tabFolder.addSelectionListener(new SelectionAdapter()
-		{
-			private final IActivator NODE_TAB_ACTIVATOR = new IActivator()
-			{
-				public void activate()
-				{
-					m_tabFolder.setSelection(advisorTab);
+		tabFolder.addSelectionListener(new SelectionAdapter() {
+			private final IActivator NODE_TAB_ACTIVATOR = new IActivator() {
+				public void activate() {
+					tabFolder.setSelection(advisorTab);
 				}
 			};
 
-			private CTabItem m_lastTab = mainTab;
+			private CTabItem lastTab = mainTab;
 
 			@Override
-			public void widgetSelected(SelectionEvent e)
-			{
+			public void widgetSelected(SelectionEvent e) {
 				// save row
-				if(m_lastTab != e.item)
-				{
-					if(m_lastTab == advisorTab)
-						if(!saveLastNode(NODE_TAB_ACTIVATOR))
+				if (lastTab != e.item) {
+					if (lastTab == advisorTab)
+						if (!saveLastNode(NODE_TAB_ACTIVATOR))
 							return;
 				}
 
-				if(m_xmlTab == e.item)
-				{
-					if(!commitChangesToQuery())
-						MessageDialog.openWarning(getSite().getShell(), null,
-								Messages.xml_content_was_not_updated_due_to_errors);
+				if (xmlTab == e.item) {
+					if (!commitChangesToQuery())
+						MessageDialog.openWarning(getSite().getShell(), null, Messages.xml_content_was_not_updated_due_to_errors);
 					else
-						m_xml.setText(getCQueryXML());
+						xml.setText(getCQueryXML());
 				}
-				m_lastTab = (CTabItem)e.item;
+				lastTab = (CTabItem) e.item;
 			}
 		});
 
 		createActionButtons(topComposite);
 	}
 
-	public void doExternalSaveAs()
-	{
-		if(!commitChangesToQuery())
+	public void doExternalSaveAs() {
+		if (!commitChangesToQuery())
 			return;
 		FileDialog dlg = new FileDialog(getSite().getShell(), SWT.SAVE);
 		dlg.setFilterExtensions(new String[] { "*.cquery" }); //$NON-NLS-1$
 		final String location = dlg.open();
-		if(location == null)
+		if (location == null)
 			return;
 		saveToPath(new Path(location));
 	}
 
 	@Override
-	public void doSave(IProgressMonitor monitor)
-	{
-		if(!commitChangesToQuery())
+	public void doSave(IProgressMonitor monitor) {
+		if (!commitChangesToQuery())
 			return;
 
 		IEditorInput input = getEditorInput();
-		if(input == null)
+		if (input == null)
 			return;
 
-		IPath path = (input instanceof ILocationProvider)
-				? ((ILocationProvider)input).getPath(input)
-				: ((IPathEditorInput)input).getPath();
+		IPath path = (input instanceof ILocationProvider) ? ((ILocationProvider) input).getPath(input) : ((IPathEditorInput) input).getPath();
 
 		saveToPath(path);
 	}
 
 	@Override
-	public void doSaveAs()
-	{
-		if(!commitChangesToQuery())
+	public void doSaveAs() {
+		if (!commitChangesToQuery())
 			return;
 
 		IEditorInput input = getEditorInput();
-		if(input == null)
+		if (input == null)
 			return;
 
 		SaveAsDialog dialog = new SaveAsDialog(getSite().getShell());
-		IFile original = (input instanceof IFileEditorInput)
-				? ((IFileEditorInput)input).getFile()
-				: null;
-		if(original != null)
+		IFile original = (input instanceof IFileEditorInput) ? ((IFileEditorInput) input).getFile() : null;
+		if (original != null)
 			dialog.setOriginalFile(original);
 
-		if(dialog.open() == Window.CANCEL)
+		if (dialog.open() == Window.CANCEL)
 			return;
 
 		IPath filePath = dialog.getResult();
-		if(filePath == null)
+		if (filePath == null)
 			return;
 
 		IWorkspace workspace = ResourcesPlugin.getWorkspace();
@@ -494,112 +454,86 @@ public class QueryEditor extends EditorPart implements IEditorMatchingStrategy
 	}
 
 	@Override
-	public void init(IEditorSite site, IEditorInput input) throws PartInitException
-	{
-		if(!(input instanceof ILocationProvider || input instanceof IPathEditorInput || input instanceof IURIEditorInput))
+	public void init(IEditorSite site, IEditorInput input) throws PartInitException {
+		if (!(input instanceof ILocationProvider || input instanceof IPathEditorInput || input instanceof IURIEditorInput))
 			throw new PartInitException(Messages.invalid_input);
 
 		setSite(site);
 
-		if(input instanceof IURIEditorInput)
-		{
-			try
-			{
-				input = EditorUtils.getExternalFileEditorInput((IURIEditorInput)input, ArtifactType.CQUERY);
-			}
-			catch(Exception e)
-			{
+		if (input instanceof IURIEditorInput) {
+			try {
+				input = EditorUtils.getExternalFileEditorInput((IURIEditorInput) input, ArtifactType.CQUERY);
+			} catch (Exception e) {
 				throw new PartInitException(Messages.unable_to_open_editor, e);
 			}
 		}
 
 		InputStream stream = null;
-		try
-		{
-			IPath path = (input instanceof ILocationProvider)
-					? ((ILocationProvider)input).getPath(input)
-					: ((IPathEditorInput)input).getPath();
+		try {
+			IPath path = (input instanceof ILocationProvider) ? ((ILocationProvider) input).getPath(input) : ((IPathEditorInput) input).getPath();
 
 			File file = path.toFile();
-			m_componentQuery = new ComponentQueryBuilder();
-			if(file.length() == 0)
-			{
+			componentQuery = new ComponentQueryBuilder();
+			if (file.length() == 0) {
 				String defaultName = file.getName();
-				if(defaultName.startsWith(BlankQueryAction.TEMP_FILE_PREFIX))
+				if (defaultName.startsWith(BlankQueryAction.TEMP_FILE_PREFIX))
 					defaultName = ""; //$NON-NLS-1$
-				else
-				{
+				else {
 					int lastDot = defaultName.lastIndexOf('.');
-					if(lastDot > 0)
+					if (lastDot > 0)
 						defaultName = defaultName.substring(0, lastDot);
 				}
-				m_componentQuery.setRootRequest(new ComponentRequest(defaultName, null, null));
-			}
-			else
-			{
+				componentQuery.setRootRequest(new ComponentRequest(defaultName, null, null));
+			} else {
 				stream = new FileInputStream(file);
 				URL contextURL;
-				try
-				{
+				try {
 					// The context URL is normally passed on as the tooltip text
 					//
 					contextURL = URLUtils.normalizeToURL(input.getToolTipText());
-				}
-				catch(MalformedURLException e)
-				{
+				} catch (MalformedURLException e) {
 					contextURL = file.toURI().toURL();
 				}
-				m_componentQuery.initFrom(ComponentQuery.fromStream(contextURL, null, stream, true));
-				CorePlugin.getLogger().debug("CQUERY Context URL set to %s", m_componentQuery.getContextURL()); //$NON-NLS-1$
+				componentQuery.initFrom(ComponentQuery.fromStream(contextURL, null, stream, true));
+				CorePlugin.getLogger().debug("CQUERY Context URL set to %s", componentQuery.getContextURL()); //$NON-NLS-1$
 			}
-			m_needsRefresh = true;
-			if(m_componentName != null)
-			{
+			needsRefresh = true;
+			if (componentName != null) {
 				refreshQuery();
 			}
 			setInputWithNotify(input);
 			setPartName(input.getName());
-		}
-		catch(Throwable e)
-		{
+		} catch (Throwable e) {
 			CoreException ce = BuckminsterException.wrap(e);
 			throw new PartInitException(Messages.unable_to_open_editor, ce);
-		}
-		finally
-		{
+		} finally {
 			IOUtils.close(stream);
 		}
 
-		m_compoundModifyListener = new CompoundModifyListener();
+		compoundModifyListener = new CompoundModifyListener();
 	}
 
 	@Override
-	public boolean isDirty()
-	{
-		return m_hasChanges;
+	public boolean isDirty() {
+		return hasChanges;
 	}
 
 	@Override
-	public boolean isSaveAsAllowed()
-	{
+	public boolean isSaveAsAllowed() {
 		return true;
 	}
 
-	public boolean matches(IEditorReference editorRef, IEditorInput input)
-	{
-		IEditorPart part = (IEditorPart)editorRef.getPart(false);
-		if(part != null)
-		{
+	public boolean matches(IEditorReference editorRef, IEditorInput input) {
+		IEditorPart part = (IEditorPart) editorRef.getPart(false);
+		if (part != null) {
 			IEditorInput editorInput = part.getEditorInput();
-			if(editorInput != null)
-			{
-				if(editorInput.equals(input))
+			if (editorInput != null) {
+				if (editorInput.equals(input))
 					return true;
 
-				if(editorInput instanceof IDerivedEditorInput)
-				{
-					IEditorInput originalEditorInput = ((IDerivedEditorInput)editorInput).getOriginalInput();
-					if(originalEditorInput.equals(input))
+				if (editorInput instanceof IDerivedEditorInput) {
+					IEditorInput originalEditorInput = ((IDerivedEditorInput) editorInput).getOriginalInput();
+					if (originalEditorInput.equals(input))
 						return true;
 				}
 			}
@@ -608,29 +542,25 @@ public class QueryEditor extends EditorPart implements IEditorMatchingStrategy
 	}
 
 	@Override
-	public void setFocus()
-	{
-		m_tabFolder.setFocus();
+	public void setFocus() {
+		tabFolder.setFocus();
 
-		if(m_needsRefresh)
+		if (needsRefresh)
 			refreshQuery();
 	}
 
-	private AdvisorNodeBuilder addEmptyNode()
-	{
+	private AdvisorNodeBuilder addEmptyNode() {
 		AdvisorNodeBuilder node = new AdvisorNodeBuilder();
 		node.setNamePattern(Pattern.compile("")); //$NON-NLS-1$
-		m_componentQuery.addAdvisorNode(node);
+		componentQuery.addAdvisorNode(node);
 
 		return node;
 	}
 
-	private void changeNodeSelection()
-	{
-		if(!saveLastNode())
-		{
-			if(m_lastSelectedNode != -1)
-				m_nodeTable.getTable().setSelection(m_lastSelectedNode);
+	private void changeNodeSelection() {
+		if (!saveLastNode()) {
+			if (lastSelectedNode != -1)
+				nodeTable.getTable().setSelection(lastSelectedNode);
 
 			return;
 		}
@@ -638,58 +568,48 @@ public class QueryEditor extends EditorPart implements IEditorMatchingStrategy
 		nodeSelectionEvent();
 	}
 
-	private boolean commitChangesToQuery()
-	{
-		if(m_nodeTable.getControl().isVisible())
-			if(!saveLastNode())
+	private boolean commitChangesToQuery() {
+		if (nodeTable.getControl().isVisible())
+			if (!saveLastNode())
 				return false;
 
-		m_componentQuery.setResourceMapURL(UiUtils.trimmedValue(m_requestURL));
-		m_componentQuery.setPropertiesURL(UiUtils.trimmedValue(m_propertyURL));
-		m_properties.fillProperties(m_componentQuery.getDeclaredProperties());
+		componentQuery.setResourceMapURL(UiUtils.trimmedValue(requestURL));
+		componentQuery.setPropertiesURL(UiUtils.trimmedValue(propertyURL));
+		properties.fillProperties(componentQuery.getDeclaredProperties());
 
-		String doc = UiUtils.trimmedValue(m_shortDesc);
-		m_componentQuery.setShortDesc(doc);
+		String doc = UiUtils.trimmedValue(shortDesc);
+		componentQuery.setShortDesc(doc);
 
-		doc = UiUtils.trimmedValue(m_documentation);
-		try
-		{
-			m_componentQuery.setDocumentation(doc == null
-					? null
-					: Documentation.parse(doc));
-		}
-		catch(CoreException e)
-		{
+		doc = UiUtils.trimmedValue(documentation);
+		try {
+			componentQuery.setDocumentation(doc == null ? null : Documentation.parse(doc));
+		} catch (CoreException e) {
 			MessageDialog.openError(getSite().getShell(), null, e.getMessage());
 			return false;
 		}
 
 		ComponentRequest[] requestRet = new ComponentRequest[1];
 		String error = commitChanges(requestRet);
-		if(error == null)
-			m_componentQuery.setRootRequest(requestRet[0]);
-		else
-		{
+		if (error == null)
+			componentQuery.setRootRequest(requestRet[0]);
+		else {
 			MessageDialog.openError(getSite().getShell(), null, error);
 			return false;
 		}
 		return true;
 	}
 
-	private void createActionButtons(Composite parent)
-	{
+	private void createActionButtons(Composite parent) {
 		Composite allButtonsBox = new Composite(parent, SWT.NONE);
 		GridLayout layout = new GridLayout(2, false);
 		// layout.marginHeight = layout.marginWidth = 0;
 		allButtonsBox.setLayout(layout);
 		allButtonsBox.setLayoutData(new GridData(SWT.FILL, SWT.FILL, true, false));
 
-		UiUtils.createCheckButton(allButtonsBox, Messages.continue_on_error, new SelectionAdapter()
-		{
+		UiUtils.createCheckButton(allButtonsBox, Messages.continue_on_error, new SelectionAdapter() {
 			@Override
-			public void widgetSelected(SelectionEvent e)
-			{
-				m_continueOnError = ((Button)e.getSource()).getSelection();
+			public void widgetSelected(SelectionEvent e) {
+				continueOnError = ((Button) e.getSource()).getSelection();
 			}
 		});
 
@@ -699,41 +619,32 @@ public class QueryEditor extends EditorPart implements IEditorMatchingStrategy
 		pressButtonsBox.setLayout(layout);
 		pressButtonsBox.setLayoutData(new GridData(SWT.END, SWT.FILL, true, false));
 
-		m_resolveButton = UiUtils.createPushButton(pressButtonsBox, Messages.resolve_to_wizard, new SelectionAdapter()
-		{
+		resolveButton = UiUtils.createPushButton(pressButtonsBox, Messages.resolve_to_wizard, new SelectionAdapter() {
 			@Override
-			public void widgetSelected(SelectionEvent e)
-			{
+			public void widgetSelected(SelectionEvent e) {
 				loadComponent(false);
 			}
 		});
-		m_resolveButton.setLayoutData(new GridData(SWT.FILL, SWT.FILL, false, false));
+		resolveButton.setLayoutData(new GridData(SWT.FILL, SWT.FILL, false, false));
 
-		m_materializeButton = UiUtils.createPushButton(pressButtonsBox, Messages.resolve_and_materialize,
-				new SelectionAdapter()
-				{
-					@Override
-					public void widgetSelected(SelectionEvent e)
-					{
-						loadComponent(true);
-					}
-				});
-		m_materializeButton.setLayoutData(new GridData(SWT.FILL, SWT.FILL, false, false));
+		materializeButton = UiUtils.createPushButton(pressButtonsBox, Messages.resolve_and_materialize, new SelectionAdapter() {
+			@Override
+			public void widgetSelected(SelectionEvent e) {
+				loadComponent(true);
+			}
+		});
+		materializeButton.setLayoutData(new GridData(SWT.FILL, SWT.FILL, false, false));
 
-		m_externalSaveAsButton = UiUtils.createPushButton(pressButtonsBox, Messages.external_save_as,
-				new SelectionAdapter()
-				{
-					@Override
-					public void widgetSelected(SelectionEvent e)
-					{
-						doExternalSaveAs();
-					}
-				});
-		m_externalSaveAsButton.setLayoutData(new GridData(SWT.FILL, SWT.FILL, false, false));
+		externalSaveAsButton = UiUtils.createPushButton(pressButtonsBox, Messages.external_save_as, new SelectionAdapter() {
+			@Override
+			public void widgetSelected(SelectionEvent e) {
+				doExternalSaveAs();
+			}
+		});
+		externalSaveAsButton.setLayoutData(new GridData(SWT.FILL, SWT.FILL, false, false));
 	}
 
-	private void createButtonBox(Composite parent)
-	{
+	private void createButtonBox(Composite parent) {
 		Composite buttonBox = new Composite(parent, SWT.NULL);
 		buttonBox.setLayoutData(new GridData(SWT.FILL, SWT.FILL, false, false));
 		FillLayout layout = new FillLayout(SWT.VERTICAL);
@@ -755,278 +666,262 @@ public class QueryEditor extends EditorPart implements IEditorMatchingStrategy
 		layout.marginWidth = layout.marginHeight = 0;
 		buttonBox2.setLayout(layout);
 
-		m_newButton = UiUtils.createPushButton(buttonBox1, Messages.new_label, new SelectionAdapter()
-		{
+		newButton = UiUtils.createPushButton(buttonBox1, Messages.new_label, new SelectionAdapter() {
 			@Override
-			public void widgetSelected(SelectionEvent e)
-			{
+			public void widgetSelected(SelectionEvent e) {
 				newNode();
 			}
 		});
 
-		m_removeButton = UiUtils.createPushButton(buttonBox1, Messages.remove, new SelectionAdapter()
-		{
+		removeButton = UiUtils.createPushButton(buttonBox1, Messages.remove, new SelectionAdapter() {
 			@Override
-			public void widgetSelected(SelectionEvent e)
-			{
+			public void widgetSelected(SelectionEvent e) {
 				removeNode();
 			}
 		});
 
-		m_moveUpButton = UiUtils.createPushButton(buttonBox2, Messages.move_up, new SelectionAdapter()
-		{
+		moveUpButton = UiUtils.createPushButton(buttonBox2, Messages.move_up, new SelectionAdapter() {
 			@Override
-			public void widgetSelected(SelectionEvent e)
-			{
+			public void widgetSelected(SelectionEvent e) {
 				swapAndReselect(0, -1);
 			}
 		});
 
-		m_moveDownButton = UiUtils.createPushButton(buttonBox2, Messages.move_down, new SelectionAdapter()
-		{
+		moveDownButton = UiUtils.createPushButton(buttonBox2, Messages.move_down, new SelectionAdapter() {
 			@Override
-			public void widgetSelected(SelectionEvent e)
-			{
+			public void widgetSelected(SelectionEvent e) {
 				swapAndReselect(1, 0);
 			}
 		});
 	}
 
-	private void createNodeFields(Composite parent)
-	{
+	private void createNodeFields(Composite parent) {
 		createNodeTree(parent);
 
 		createNodeStack(parent);
 	}
 
-	private void createNodeStack(Composite parent)
-	{
-		m_nodesStackComposite = new Composite(parent, SWT.NONE);
-		m_nodesStackComposite.setLayoutData(new GridData(SWT.FILL, SWT.FILL, true, true));
-		m_nodesStackLayout = new StackLayout();
-		m_nodesStackLayout.marginHeight = m_nodesStackLayout.marginWidth = 0;
-		m_nodesStackComposite.setLayout(m_nodesStackLayout);
+	private void createNodeStack(Composite parent) {
+		nodesStackComposite = new Composite(parent, SWT.NONE);
+		nodesStackComposite.setLayoutData(new GridData(SWT.FILL, SWT.FILL, true, true));
+		nodesStackLayout = new StackLayout();
+		nodesStackLayout.marginHeight = nodesStackLayout.marginWidth = 0;
+		nodesStackComposite.setLayout(nodesStackLayout);
 
-		m_nodesHash = new HashMap<String, Control>();
+		nodesHash = new HashMap<String, Control>();
 
-		Composite geComposite = new Composite(m_nodesStackComposite, SWT.NONE);
+		Composite geComposite = new Composite(nodesStackComposite, SWT.NONE);
 		GridLayout layout = new GridLayout(2, false);
 		layout.marginHeight = layout.marginWidth = 0;
 		geComposite.setLayout(layout);
 
-		m_nodesHash.put(Messages.general, geComposite);
+		nodesHash.put(Messages.general, geComposite);
 
 		EditorUtils.createHeaderLabel(geComposite, Messages.general, 2);
 
 		UiUtils.createGridLabel(geComposite, Messages.name_pattern_with_colon, 1, 0, SWT.NONE);
 
-		m_namePattern = UiUtils.createGridText(geComposite, 1, 0, SWT.NONE);
-		m_namePattern.addModifyListener(m_compoundModifyListener);
+		namePattern = UiUtils.createGridText(geComposite, 1, 0, SWT.NONE);
+		namePattern.addModifyListener(compoundModifyListener);
 
 		UiUtils.createGridLabel(geComposite, Messages.matched_component_type_with_colon, 1, 0, SWT.NONE);
 
-		m_category = UiUtils.createGridCombo(geComposite, 1, 0, null, null, SWT.DROP_DOWN | SWT.READ_ONLY | SWT.SIMPLE);
-		m_category.setItems(AbstractComponentType.getComponentTypeIDs(true));
-		m_category.addModifyListener(m_compoundModifyListener);
+		category = UiUtils.createGridCombo(geComposite, 1, 0, null, null, SWT.DROP_DOWN | SWT.READ_ONLY | SWT.SIMPLE);
+		category.setItems(AbstractComponentType.getComponentTypeIDs(true));
+		category.addModifyListener(compoundModifyListener);
 
 		UiUtils.createGridLabel(geComposite, Messages.filter_with_colon, 1, 0, SWT.NONE);
 
-		m_filter = UiUtils.createGridText(geComposite, 1, 0, SWT.NONE);
-		m_filter.addModifyListener(m_compoundModifyListener);
+		filter = UiUtils.createGridText(geComposite, 1, 0, SWT.NONE);
+		filter.addModifyListener(compoundModifyListener);
 
 		UiUtils.createGridLabel(geComposite, Messages.skip_component_with_colon, 1, 0, SWT.NONE);
-		m_skipComponent = UiUtils.createCheckButton(geComposite, null, new SelectionAdapter()
-		{
+		skipComponent = UiUtils.createCheckButton(geComposite, null, new SelectionAdapter() {
 			@Override
-			public void widgetSelected(SelectionEvent e)
-			{
+			public void widgetSelected(SelectionEvent e) {
 				enableDisableSkipSensitive(false);
 			}
 		});
-		m_skipComponent.setLayoutData(new GridData(SWT.FILL, SWT.FILL, true, false));
-		m_skipComponent.addSelectionListener(m_compoundModifyListener);
+		skipComponent.setLayoutData(new GridData(SWT.FILL, SWT.FILL, true, false));
+		skipComponent.addSelectionListener(compoundModifyListener);
 
 		UiUtils.createGridLabel(geComposite, Messages.allow_circular_dependency_with_colon, 1, 0, SWT.NONE);
-		m_allowCircular = UiUtils.createCheckButton(geComposite, null, null);
-		m_allowCircular.addSelectionListener(m_compoundModifyListener);
+		allowCircular = UiUtils.createCheckButton(geComposite, null, null);
+		allowCircular.addSelectionListener(compoundModifyListener);
 
-		Composite aqComposite = new Composite(m_nodesStackComposite, SWT.NONE);
+		Composite aqComposite = new Composite(nodesStackComposite, SWT.NONE);
 		layout = new GridLayout(2, false);
 		layout.marginHeight = layout.marginWidth = 0;
 		aqComposite.setLayout(layout);
 
-		m_nodesHash.put(Messages.attribute_qualification, aqComposite);
+		nodesHash.put(Messages.attribute_qualification, aqComposite);
 
 		EditorUtils.createHeaderLabel(aqComposite, Messages.attribute_qualification, 2);
 
 		UiUtils.createGridLabel(aqComposite, Messages.attributes_with_colon, 1, 0, SWT.NONE);
-		m_wantedAttributes = UiUtils.createGridText(aqComposite, 0, 0, SWT.NONE);
-		m_wantedAttributes.addModifyListener(m_compoundModifyListener);
+		wantedAttributes = UiUtils.createGridText(aqComposite, 0, 0, SWT.NONE);
+		wantedAttributes.addModifyListener(compoundModifyListener);
 		UiUtils.createGridLabel(aqComposite, Messages.prune_according_to_attributes_with_colon, 1, 0, SWT.NONE);
-		m_prune = UiUtils.createCheckButton(aqComposite, null, null);
-		m_prune.addSelectionListener(m_compoundModifyListener);
+		prune = UiUtils.createCheckButton(aqComposite, null, null);
+		prune.addSelectionListener(compoundModifyListener);
 
-		Composite srComposite = new Composite(m_nodesStackComposite, SWT.NONE);
+		Composite srComposite = new Composite(nodesStackComposite, SWT.NONE);
 		layout = new GridLayout(2, false);
 		layout.marginHeight = layout.marginWidth = 0;
 		srComposite.setLayout(layout);
 
-		m_nodesHash.put(Messages.special_requirements, srComposite);
+		nodesHash.put(Messages.special_requirements, srComposite);
 
 		EditorUtils.createHeaderLabel(srComposite, Messages.special_requirements, 2);
 
 		UiUtils.createGridLabel(srComposite, Messages.mutable_level_with_colon, 1, 0, SWT.NONE);
-		m_mutableLevel = UiUtils.createGridEnumCombo(srComposite, 0, 0, MutableLevel.values(), null, null, SWT.NONE);
-		m_mutableLevel.addModifyListener(m_compoundModifyListener);
+		mutableLevel = UiUtils.createGridEnumCombo(srComposite, 0, 0, MutableLevel.values(), null, null, SWT.NONE);
+		mutableLevel.addModifyListener(compoundModifyListener);
 		UiUtils.createGridLabel(srComposite, Messages.source_level_with_colon, 1, 0, SWT.NONE);
-		m_sourceLevel = UiUtils.createGridEnumCombo(srComposite, 0, 0, SourceLevel.values(), null, null, SWT.NONE);
-		m_sourceLevel.addModifyListener(m_compoundModifyListener);
+		sourceLevel = UiUtils.createGridEnumCombo(srComposite, 0, 0, SourceLevel.values(), null, null, SWT.NONE);
+		sourceLevel.addModifyListener(compoundModifyListener);
 
-		Composite kuComposite = new Composite(m_nodesStackComposite, SWT.NONE);
+		Composite kuComposite = new Composite(nodesStackComposite, SWT.NONE);
 		layout = new GridLayout(2, false);
 		layout.marginHeight = layout.marginWidth = 0;
 		kuComposite.setLayout(layout);
 
-		m_nodesHash.put(Messages.resolution_scope, kuComposite);
+		nodesHash.put(Messages.resolution_scope, kuComposite);
 
 		EditorUtils.createHeaderLabel(kuComposite, Messages.resolution_scope, 2);
 
 		UiUtils.createGridLabel(kuComposite, Messages.target_platform_with_colon, 1, 0, SWT.NONE);
-		m_useTargetPlatform = UiUtils.createCheckButton(kuComposite, null, null);
-		m_useTargetPlatform.addSelectionListener(m_compoundModifyListener);
+		useTargetPlatform = UiUtils.createCheckButton(kuComposite, null, null);
+		useTargetPlatform.addSelectionListener(compoundModifyListener);
 		UiUtils.createGridLabel(kuComposite, Messages.workspace_with_colon, 1, 0, SWT.NONE);
-		m_useWorkspace = UiUtils.createCheckButton(kuComposite, null, null);
-		m_useWorkspace.addSelectionListener(m_compoundModifyListener);
+		useWorkspace = UiUtils.createCheckButton(kuComposite, null, null);
+		useWorkspace.addSelectionListener(compoundModifyListener);
 		UiUtils.createGridLabel(kuComposite, Messages.materialization_with_colon, 1, 0, SWT.NONE);
-		m_useMaterialization = UiUtils.createCheckButton(kuComposite, null, null);
-		m_useMaterialization.addSelectionListener(m_compoundModifyListener);
+		useMaterialization = UiUtils.createCheckButton(kuComposite, null, null);
+		useMaterialization.addSelectionListener(compoundModifyListener);
 		UiUtils.createGridLabel(kuComposite, Messages.resolution_service_with_colon, 1, 0, SWT.NONE);
-		m_useResolutionService = UiUtils.createCheckButton(kuComposite, null, null);
-		m_useResolutionService.addSelectionListener(m_compoundModifyListener);
+		useResolutionService = UiUtils.createCheckButton(kuComposite, null, null);
+		useResolutionService.addSelectionListener(compoundModifyListener);
 
-		Composite scComposite = new Composite(m_nodesStackComposite, SWT.NONE);
+		Composite scComposite = new Composite(nodesStackComposite, SWT.NONE);
 		layout = new GridLayout(2, false);
 		layout.marginHeight = layout.marginWidth = 0;
 		scComposite.setLayout(layout);
 
-		m_nodesHash.put(Messages.selection_criteria, scComposite);
+		nodesHash.put(Messages.selection_criteria, scComposite);
 		EditorUtils.createHeaderLabel(scComposite, Messages.selection_criteria, 2);
 
 		UiUtils.createGridLabel(scComposite, Messages.branch_or_tag_path_with_colon, 1, 0, SWT.NONE);
-		m_branchTagPath = UiUtils.createGridText(scComposite, 1, 0, SWT.NONE);
-		m_branchTagPath.addModifyListener(m_compoundModifyListener);
+		branchTagPath = UiUtils.createGridText(scComposite, 1, 0, SWT.NONE);
+		branchTagPath.addModifyListener(compoundModifyListener);
 
 		UiUtils.createGridLabel(scComposite, Messages.timestamp_with_colon, 1, 0, SWT.NONE);
-		m_timestamp = UiUtils.createGridText(scComposite, 1, 0, SWT.NONE);
-		m_timestamp.addModifyListener(m_compoundModifyListener);
+		timestamp = UiUtils.createGridText(scComposite, 1, 0, SWT.NONE);
+		timestamp.addModifyListener(compoundModifyListener);
 		UiUtils.createGridLabel(scComposite, Messages.revision_with_colon, 1, 0, SWT.NONE);
-		m_revision = UiUtils.createGridText(scComposite, 1, 0, SWT.NONE);
-		m_revision.addModifyListener(m_compoundModifyListener);
+		revision = UiUtils.createGridText(scComposite, 1, 0, SWT.NONE);
+		revision.addModifyListener(compoundModifyListener);
 
-		Composite ovComposite = new Composite(m_nodesStackComposite, SWT.NONE);
+		Composite ovComposite = new Composite(nodesStackComposite, SWT.NONE);
 		layout = new GridLayout(3, false);
 		layout.marginHeight = layout.marginWidth = 0;
 		ovComposite.setLayout(layout);
 
-		m_nodesHash.put(Messages.override, ovComposite);
+		nodesHash.put(Messages.override, ovComposite);
 
 		EditorUtils.createHeaderLabel(ovComposite, Messages.override, 3);
 
 		UiUtils.createGridLabel(ovComposite, Messages.override_version, 1, 0, SWT.NONE);
-		m_enableOverride = UiUtils.createCheckButton(ovComposite, null, new SelectionAdapter()
-		{
+		enableOverride = UiUtils.createCheckButton(ovComposite, null, new SelectionAdapter() {
 			@Override
-			public void widgetSelected(SelectionEvent e)
-			{
-				boolean selected = ((Button)e.getSource()).getSelection();
-				m_versionOverride.setEnabled(selected);
+			public void widgetSelected(SelectionEvent e) {
+				boolean selected = ((Button) e.getSource()).getSelection();
+				versionOverride.setEnabled(selected);
 			}
 		});
-		m_enableOverride.addSelectionListener(m_compoundModifyListener);
+		enableOverride.addSelectionListener(compoundModifyListener);
 		UiUtils.createEmptyLabel(ovComposite);
 
-		m_versionOverride = new VersionDesignator(ovComposite);
-		m_versionOverride.addVersionDesignatorListener(m_compoundModifyListener);
+		versionOverride = new VersionDesignator(ovComposite);
+		versionOverride.addVersionDesignatorListener(compoundModifyListener);
 
-		Composite ofComposite = new Composite(m_nodesStackComposite, SWT.NONE);
+		Composite ofComposite = new Composite(nodesStackComposite, SWT.NONE);
 		layout = new GridLayout(2, false);
 		layout.marginHeight = layout.marginWidth = 0;
 		ofComposite.setLayout(layout);
 
-		m_nodesHash.put(Messages.overlay_folder, ofComposite);
+		nodesHash.put(Messages.overlay_folder, ofComposite);
 
 		EditorUtils.createHeaderLabel(ofComposite, Messages.overlay_folder_for_prototyping, 2);
 
 		UiUtils.createGridLabel(ofComposite, Messages.folder_with_colon, 1, 0, SWT.NONE);
-		m_overlayFolder = UiUtils.createGridText(ofComposite, 1, 0, SWT.NONE);
-		m_overlayFolder.addModifyListener(m_compoundModifyListener);
+		overlayFolder = UiUtils.createGridText(ofComposite, 1, 0, SWT.NONE);
+		overlayFolder.addModifyListener(compoundModifyListener);
 		Label label = UiUtils.createEmptyLabel(ofComposite);
 		label.setLayoutData(new GridData(SWT.FILL, SWT.FILL, false, false));
-		m_overlayBrowseButton = new Button(ofComposite, SWT.PUSH);
-		m_overlayBrowseButton.setLayoutData(new GridData(SWT.LEFT, SWT.CENTER, false, false));
-		m_overlayBrowseButton.setText(Messages.browse_with_dots);
-		m_overlayBrowseButton.addSelectionListener(new SelectionAdapter()
-		{
+		overlayBrowseButton = new Button(ofComposite, SWT.PUSH);
+		overlayBrowseButton.setLayoutData(new GridData(SWT.LEFT, SWT.CENTER, false, false));
+		overlayBrowseButton.setText(Messages.browse_with_dots);
+		overlayBrowseButton.addSelectionListener(new SelectionAdapter() {
 			@Override
-			public void widgetSelected(SelectionEvent se)
-			{
+			public void widgetSelected(SelectionEvent se) {
 				DirectoryDialog dlg = new DirectoryDialog(getSite().getShell());
-				m_overlayFolder.setText(TextUtils.notNullString(dlg.open()));
+				overlayFolder.setText(TextUtils.notNullString(dlg.open()));
 			}
 		});
 
-		Composite prComposite = new Composite(m_nodesStackComposite, SWT.NONE);
+		Composite prComposite = new Composite(nodesStackComposite, SWT.NONE);
 		layout = new GridLayout(1, false);
 		layout.marginHeight = layout.marginWidth = 0;
 		prComposite.setLayout(layout);
 
-		m_nodesHash.put(Messages.properties, prComposite);
+		nodesHash.put(Messages.properties, prComposite);
 
 		EditorUtils.createHeaderLabel(prComposite, Messages.properties, 1);
 
-		m_nodeProperties = new Properties(prComposite, SWT.NONE);
-		m_nodeProperties.setLayoutData(new GridData(SWT.FILL, SWT.FILL, true, true));
-		m_nodeProperties.addPropertiesModifyListener(m_compoundModifyListener);
+		nodeProperties = new Properties(prComposite, SWT.NONE);
+		nodeProperties.setLayoutData(new GridData(SWT.FILL, SWT.FILL, true, true));
+		nodeProperties.addPropertiesModifyListener(compoundModifyListener);
 
-		Composite docComposite = new Composite(m_nodesStackComposite, SWT.NONE);
+		Composite docComposite = new Composite(nodesStackComposite, SWT.NONE);
 		layout = new GridLayout(1, false);
 		layout.marginHeight = layout.marginWidth = 0;
 		docComposite.setLayout(layout);
 
-		m_nodesHash.put(Messages.documentation, docComposite);
+		nodesHash.put(Messages.documentation, docComposite);
 
 		EditorUtils.createHeaderLabel(docComposite, Messages.documentation, 1);
 
-		m_nodeDocumentation = UiUtils.createGridText(docComposite, 1, 0, SWT.MULTI);
-		m_nodeDocumentation.setLayoutData(new GridData(SWT.FILL, SWT.FILL, true, true));
-		m_nodeDocumentation.addModifyListener(m_compoundModifyListener);
+		nodeDocumentation = UiUtils.createGridText(docComposite, 1, 0, SWT.MULTI);
+		nodeDocumentation.setLayoutData(new GridData(SWT.FILL, SWT.FILL, true, true));
+		nodeDocumentation.addModifyListener(compoundModifyListener);
 
 		initStackControl();
 		/*
-		 * // set the same height for nodeTable and node Tree int height = m_nodeTree.computeSize(SWT.DEFAULT,
-		 * SWT.DEFAULT).y + 35;
+		 * // set the same height for nodeTable and node Tree int height =
+		 * nodeTree.computeSize(SWT.DEFAULT, SWT.DEFAULT).y + 35;
 		 * 
-		 * Table table = (Table) m_nodeTable.getControl(); GridData gridData = (GridData) table.getLayoutData();
-		 * gridData.heightHint = height; table.setLayoutData(gridData);
+		 * Table table = (Table) nodeTable.getControl(); GridData gridData =
+		 * (GridData) table.getLayoutData(); gridData.heightHint = height;
+		 * table.setLayoutData(gridData);
 		 * 
-		 * gridData = (GridData) m_nodeTree.getLayoutData(); gridData.heightHint = height;
-		 * m_nodeTree.setLayoutData(gridData);
+		 * gridData = (GridData) nodeTree.getLayoutData(); gridData.heightHint =
+		 * height; nodeTree.setLayoutData(gridData);
 		 * 
-		 * gridData = (GridData) m_nodesStackComposite.getLayoutData(); gridData.heightHint = height + 21;
-		 * m_nodesStackComposite.setLayoutData(gridData);
+		 * gridData = (GridData) nodesStackComposite.getLayoutData();
+		 * gridData.heightHint = height + 21;
+		 * nodesStackComposite.setLayoutData(gridData);
 		 */
 	}
 
-	private void createNodeTableGroup(Composite parent)
-	{
+	private void createNodeTableGroup(Composite parent) {
 		Composite componentTableGroup = new Composite(parent, SWT.NONE);
 		GridLayout gl = new GridLayout(1, true);
 		gl.marginHeight = gl.marginWidth = 0;
 		componentTableGroup.setLayout(gl);
 		componentTableGroup.setLayoutData(new GridData(SWT.FILL, SWT.FILL, true, true));
 
-		Table table = new Table(componentTableGroup, SWT.BORDER | SWT.SINGLE | SWT.H_SCROLL | SWT.V_SCROLL
-				| SWT.FULL_SELECTION);
+		Table table = new Table(componentTableGroup, SWT.BORDER | SWT.SINGLE | SWT.H_SCROLL | SWT.V_SCROLL | SWT.FULL_SELECTION);
 
 		table.setHeaderVisible(false);
 
@@ -1035,8 +930,7 @@ public class QueryEditor extends EditorPart implements IEditorMatchingStrategy
 
 		table.setHeaderVisible(true);
 		DynamicTableLayout layout = new DynamicTableLayout(50);
-		for(int idx = 0; idx < columnNames.length; idx++)
-		{
+		for (int idx = 0; idx < columnNames.length; idx++) {
 			TableColumn tableColumn = new TableColumn(table, SWT.LEFT, idx);
 			tableColumn.setText(columnNames[idx]);
 			layout.addColumnData(new ColumnWeightData(columnWeights[idx], true));
@@ -1044,13 +938,11 @@ public class QueryEditor extends EditorPart implements IEditorMatchingStrategy
 		table.setLayout(layout);
 		table.setLayoutData(new GridData(SWT.FILL, SWT.FILL, true, true));
 
-		m_nodeTable = new TableViewer(table);
-		m_nodeTable.setLabelProvider(new AdvisorNodeLabelProvider());
-		m_nodeTable.setContentProvider(new ArrayContentProvider());
-		m_nodeTable.addSelectionChangedListener(new ISelectionChangedListener()
-		{
-			public void selectionChanged(SelectionChangedEvent event)
-			{
+		nodeTable = new TableViewer(table);
+		nodeTable.setLabelProvider(new AdvisorNodeLabelProvider());
+		nodeTable.setContentProvider(new ArrayContentProvider());
+		nodeTable.addSelectionChangedListener(new ISelectionChangedListener() {
+			public void selectionChanged(SelectionChangedEvent event) {
 				changeNodeSelection();
 			}
 		});
@@ -1058,101 +950,94 @@ public class QueryEditor extends EditorPart implements IEditorMatchingStrategy
 		createButtonBox(componentTableGroup);
 	}
 
-	private void createNodeTree(Composite parent)
-	{
-		m_nodeTree = new Tree(parent, SWT.BORDER);
-		m_nodeTree.setLayoutData(new GridData(SWT.FILL, SWT.FILL, false, true));
-		m_nodeTree.addSelectionListener(new SelectionAdapter()
-		{
+	private void createNodeTree(Composite parent) {
+		nodeTree = new Tree(parent, SWT.BORDER);
+		nodeTree.setLayoutData(new GridData(SWT.FILL, SWT.FILL, false, true));
+		nodeTree.addSelectionListener(new SelectionAdapter() {
 			@Override
-			public void widgetSelected(SelectionEvent e)
-			{
-				if(e.item != null)
-				{
-					TreeItem item = (TreeItem)e.item;
-					m_nodesStackLayout.topControl = m_nodesHash.get(item.getText());
-					m_nodesStackComposite.layout();
+			public void widgetSelected(SelectionEvent e) {
+				if (e.item != null) {
+					TreeItem item = (TreeItem) e.item;
+					nodesStackLayout.topControl = nodesHash.get(item.getText());
+					nodesStackComposite.layout();
 				}
 			}
 		});
 
-		TreeItem item = new TreeItem(m_nodeTree, SWT.NONE);
+		TreeItem item = new TreeItem(nodeTree, SWT.NONE);
 		item.setText(Messages.general);
 
-		item = new TreeItem(m_nodeTree, SWT.NONE);
+		item = new TreeItem(nodeTree, SWT.NONE);
 		item.setText(Messages.attribute_qualification);
 
-		item = new TreeItem(m_nodeTree, SWT.NONE);
+		item = new TreeItem(nodeTree, SWT.NONE);
 		item.setText(Messages.special_requirements);
 
-		item = new TreeItem(m_nodeTree, SWT.NONE);
+		item = new TreeItem(nodeTree, SWT.NONE);
 		item.setText(Messages.resolution_scope);
 
-		item = new TreeItem(m_nodeTree, SWT.NONE);
+		item = new TreeItem(nodeTree, SWT.NONE);
 		item.setText(Messages.selection_criteria);
 
-		item = new TreeItem(m_nodeTree, SWT.NONE);
+		item = new TreeItem(nodeTree, SWT.NONE);
 		item.setText(Messages.override);
 
-		item = new TreeItem(m_nodeTree, SWT.NONE);
+		item = new TreeItem(nodeTree, SWT.NONE);
 		item.setText(Messages.overlay_folder);
 
-		item = new TreeItem(m_nodeTree, SWT.NONE);
+		item = new TreeItem(nodeTree, SWT.NONE);
 		item.setText(Messages.properties);
 
-		item = new TreeItem(m_nodeTree, SWT.NONE);
+		item = new TreeItem(nodeTree, SWT.NONE);
 		item.setText(Messages.documentation);
 	}
 
-	private void enableDisableButtonGroup()
-	{
-		Table table = m_nodeTable.getTable();
+	private void enableDisableButtonGroup() {
+		Table table = nodeTable.getTable();
 		int top = table.getItemCount();
 		int idx = table.getSelectionIndex();
-		m_newButton.setText(Messages.new_label);
-		m_removeButton.setEnabled(idx >= 0);
-		m_moveUpButton.setEnabled(idx > 0);
-		m_moveDownButton.setEnabled(idx >= 0 && idx < top - 1);
+		newButton.setText(Messages.new_label);
+		removeButton.setEnabled(idx >= 0);
+		moveUpButton.setEnabled(idx > 0);
+		moveDownButton.setEnabled(idx >= 0 && idx < top - 1);
 
 		boolean disableFields = getSelectionIndex() == -1;
-		m_namePattern.setEnabled(!disableFields);
-		m_filter.setEnabled(!disableFields);
-		m_category.setEnabled(!disableFields);
-		m_skipComponent.setEnabled(!disableFields);
-		m_nodeDocumentation.setEnabled(!disableFields);
+		namePattern.setEnabled(!disableFields);
+		filter.setEnabled(!disableFields);
+		category.setEnabled(!disableFields);
+		skipComponent.setEnabled(!disableFields);
+		nodeDocumentation.setEnabled(!disableFields);
 		enableDisableSkipSensitive(disableFields);
 	}
 
-	private void enableDisableSkipSensitive(boolean forceDisable)
-	{
-		boolean enableRest = !forceDisable && !m_skipComponent.getSelection();
+	private void enableDisableSkipSensitive(boolean forceDisable) {
+		boolean enableRest = !forceDisable && !skipComponent.getSelection();
 
-		m_allowCircular.setEnabled(enableRest);
-		m_overlayFolder.setEnabled(enableRest);
-		m_overlayBrowseButton.setEnabled(enableRest);
-		m_wantedAttributes.setEnabled(enableRest);
-		m_prune.setEnabled(enableRest);
+		allowCircular.setEnabled(enableRest);
+		overlayFolder.setEnabled(enableRest);
+		overlayBrowseButton.setEnabled(enableRest);
+		wantedAttributes.setEnabled(enableRest);
+		prune.setEnabled(enableRest);
 
-		m_mutableLevel.setEnabled(enableRest);
-		m_sourceLevel.setEnabled(enableRest);
+		mutableLevel.setEnabled(enableRest);
+		sourceLevel.setEnabled(enableRest);
 
-		m_useTargetPlatform.setEnabled(enableRest);
-		m_useWorkspace.setEnabled(enableRest);
-		m_useMaterialization.setEnabled(enableRest);
-		m_useResolutionService.setEnabled(enableRest);
+		useTargetPlatform.setEnabled(enableRest);
+		useWorkspace.setEnabled(enableRest);
+		useMaterialization.setEnabled(enableRest);
+		useResolutionService.setEnabled(enableRest);
 
-		m_branchTagPath.setEnabled(enableRest);
-		m_timestamp.setEnabled(enableRest);
-		m_revision.setEnabled(enableRest);
+		branchTagPath.setEnabled(enableRest);
+		timestamp.setEnabled(enableRest);
+		revision.setEnabled(enableRest);
 
-		m_enableOverride.setEnabled(enableRest);
-		m_versionOverride.setEnabled(enableRest && m_enableOverride.getSelection());
+		enableOverride.setEnabled(enableRest);
+		versionOverride.setEnabled(enableRest && enableOverride.getSelection());
 
-		m_nodeProperties.setEnabled(enableRest);
+		nodeProperties.setEnabled(enableRest);
 	}
 
-	private Control getAdvisorTabControl(Composite parent)
-	{
+	private Control getAdvisorTabControl(Composite parent) {
 		Composite tabComposite = EditorUtils.getNamedTabComposite(parent, Messages.advisor_nodes);
 
 		Composite advisorComposite = new Composite(tabComposite, SWT.NONE);
@@ -1169,24 +1054,19 @@ public class QueryEditor extends EditorPart implements IEditorMatchingStrategy
 		return EditorUtils.getOptimizedControl(tabComposite);
 	}
 
-	private String getCQueryXML()
-	{
+	private String getCQueryXML() {
 		String cqueryXML = ""; //$NON-NLS-1$
-		try
-		{
+		try {
 			ByteArrayOutputStream baos = new ByteArrayOutputStream();
-			Utils.serialize(m_componentQuery.createComponentQuery(), baos);
+			Utils.serialize(componentQuery.createComponentQuery(), baos);
 			cqueryXML = baos.toString();
-		}
-		catch(Exception e)
-		{
+		} catch (Exception e) {
 			// nothing
 		}
 		return cqueryXML;
 	}
 
-	private Control getDocumentationTabControl(Composite parent)
-	{
+	private Control getDocumentationTabControl(Composite parent) {
 		Composite tabComposite = EditorUtils.getNamedTabComposite(parent, Messages.documentation);
 
 		Composite descComposite = new Composite(tabComposite, SWT.NONE);
@@ -1196,19 +1076,17 @@ public class QueryEditor extends EditorPart implements IEditorMatchingStrategy
 		descComposite.setLayoutData(new GridData(SWT.FILL, SWT.FILL, true, true));
 
 		UiUtils.createGridLabel(descComposite, Messages.short_description_with_colon, 1, 0, SWT.NONE);
-		m_shortDesc = UiUtils.createGridText(descComposite, 1, 0, SWT.NONE, m_compoundModifyListener);
+		shortDesc = UiUtils.createGridText(descComposite, 1, 0, SWT.NONE, compoundModifyListener);
 
 		Label label = UiUtils.createGridLabel(descComposite, Messages.documentation_with_colon, 1, 0, SWT.NONE);
 		label.setLayoutData(new GridData(SWT.FILL, SWT.BEGINNING, false, false));
-		m_documentation = UiUtils.createGridText(descComposite, 1, 0, SWT.MULTI | SWT.V_SCROLL,
-				m_compoundModifyListener);
-		m_documentation.setLayoutData(new GridData(SWT.FILL, SWT.FILL, true, true));
+		documentation = UiUtils.createGridText(descComposite, 1, 0, SWT.MULTI | SWT.V_SCROLL, compoundModifyListener);
+		documentation.setLayoutData(new GridData(SWT.FILL, SWT.FILL, true, true));
 
 		return EditorUtils.getOptimizedControl(tabComposite);
 	}
 
-	private Control getMainTabControl(CTabFolder parent)
-	{
+	private Control getMainTabControl(CTabFolder parent) {
 		Composite tabComposite = EditorUtils.getNamedTabComposite(parent, Messages.main);
 
 		Composite nameComposite = new Composite(tabComposite, SWT.NONE);
@@ -1224,24 +1102,23 @@ public class QueryEditor extends EditorPart implements IEditorMatchingStrategy
 		gridData.widthHint = labelWidth;
 		label.setLayoutData(gridData);
 
-		m_componentName = UiUtils.createGridText(nameComposite, 2, 0, SWT.NONE, m_compoundModifyListener);
+		componentName = UiUtils.createGridText(nameComposite, 2, 0, SWT.NONE, compoundModifyListener);
 
 		UiUtils.createGridLabel(nameComposite, Messages.component_type_with_colon, 1, 0, SWT.NONE);
-		m_componentType = UiUtils.createGridCombo(nameComposite, 1, 0, null, null, SWT.DROP_DOWN | SWT.READ_ONLY
-				| SWT.SIMPLE);
+		componentType = UiUtils.createGridCombo(nameComposite, 1, 0, null, null, SWT.DROP_DOWN | SWT.READ_ONLY | SWT.SIMPLE);
 
-		m_componentType.setItems(AbstractComponentType.getComponentTypeIDs(true));
-		m_componentType.addModifyListener(m_compoundModifyListener);
+		componentType.setItems(AbstractComponentType.getComponentTypeIDs(true));
+		componentType.addModifyListener(compoundModifyListener);
 
 		// not nice but I had to make equal 2 columns form different Composites
 		// the purpose of hlpComposite is to create empty space, the same size
-		// as m_componentCategory
+		// as componentCategory
 		UiUtils.createEmptyPanel(nameComposite);
 
-		int textWidth = m_componentType.computeSize(SWT.DEFAULT, SWT.DEFAULT).x;
-		gridData = (GridData)m_componentType.getLayoutData();
+		int textWidth = componentType.computeSize(SWT.DEFAULT, SWT.DEFAULT).x;
+		gridData = (GridData) componentType.getLayoutData();
 		gridData.widthHint = textWidth;
-		m_componentType.setLayoutData(gridData);
+		componentType.setLayoutData(gridData);
 
 		Group versionGroup = new Group(tabComposite, SWT.NONE);
 		versionGroup.setText(Messages.version);
@@ -1249,16 +1126,16 @@ public class QueryEditor extends EditorPart implements IEditorMatchingStrategy
 		versionGroup.setLayout(layout);
 		versionGroup.setLayoutData(new GridData(GridData.FILL, GridData.FILL, true, false));
 
-		m_versionDesignator = new VersionDesignator(versionGroup);
-		m_versionDesignator.addVersionDesignatorListener(m_compoundModifyListener);
+		versionDesignator = new VersionDesignator(versionGroup);
+		versionDesignator.addVersionDesignatorListener(compoundModifyListener);
 
-		Control control = m_versionDesignator.getVersionDsTypeLabel();
-		gridData = (GridData)control.getLayoutData();
+		Control control = versionDesignator.getVersionDsTypeLabel();
+		gridData = (GridData) control.getLayoutData();
 		gridData.widthHint = labelWidth - layout.marginWidth - 3;
 		control.setLayoutData(gridData);
 
-		control = m_versionDesignator.getVersionDsTypeCombo();
-		gridData = (GridData)control.getLayoutData();
+		control = versionDesignator.getVersionDsTypeCombo();
+		gridData = (GridData) control.getLayoutData();
 		gridData.widthHint = textWidth;
 		control.setLayoutData(gridData);
 
@@ -1269,26 +1146,21 @@ public class QueryEditor extends EditorPart implements IEditorMatchingStrategy
 		propertiesGroup.setLayout(layout);
 		propertiesGroup.setLayoutData(new GridData(GridData.FILL, GridData.FILL, true, false));
 
-		m_propertyURLCheckbox = UiUtils.createCheckButton(propertiesGroup, Messages.user_properties,
-				new SelectionAdapter()
-				{
-					@Override
-					public void widgetSelected(SelectionEvent e)
-					{
-						Button button = (Button)e.widget;
+		propertyURLCheckbox = UiUtils.createCheckButton(propertiesGroup, Messages.user_properties, new SelectionAdapter() {
+			@Override
+			public void widgetSelected(SelectionEvent e) {
+				Button button = (Button) e.widget;
 
-						if(!button.getSelection())
-						{
-							m_propertyURL.setText(""); //$NON-NLS-1$
-						}
-					}
-				});
+				if (!button.getSelection()) {
+					propertyURL.setText(""); //$NON-NLS-1$
+				}
+			}
+		});
 		gridData = new GridData(SWT.BEGINNING, SWT.CENTER, false, false);
 		gridData.horizontalSpan = 2;
-		m_propertyURLCheckbox.setLayoutData(gridData);
+		propertyURLCheckbox.setLayoutData(gridData);
 
-		label = UiUtils.createGridLabel(propertiesGroup, Messages.properties_with_colon, 1, labelWidth
-				- layout.marginWidth - 3, SWT.NONE);
+		label = UiUtils.createGridLabel(propertiesGroup, Messages.properties_with_colon, 1, labelWidth - layout.marginWidth - 3, SWT.NONE);
 
 		Composite propertiesComposite = new Composite(propertiesGroup, SWT.NONE);
 
@@ -1297,39 +1169,30 @@ public class QueryEditor extends EditorPart implements IEditorMatchingStrategy
 		propertiesComposite.setLayout(layout);
 		propertiesComposite.setLayoutData(new GridData(GridData.FILL, GridData.FILL, true, false));
 
-		m_propertyURL = UiUtils.createGridText(propertiesComposite, 1, 0, SWT.NONE, m_compoundModifyListener);
+		propertyURL = UiUtils.createGridText(propertiesComposite, 1, 0, SWT.NONE, compoundModifyListener);
 		Button browseButton = new Button(propertiesComposite, SWT.PUSH);
 		browseButton.setLayoutData(new GridData(SWT.FILL, SWT.FILL, false, false));
 		browseButton.setText(Messages.browse_with_dots);
-		browseButton.addSelectionListener(new SelectionAdapter()
-		{
+		browseButton.addSelectionListener(new SelectionAdapter() {
 			@Override
-			public void widgetSelected(SelectionEvent se)
-			{
+			public void widgetSelected(SelectionEvent se) {
 				FileDialog dlg = new FileDialog(getSite().getShell());
 				dlg.setFilterExtensions(new String[] { "*.properties" }); //$NON-NLS-1$
 				String name = dlg.open();
-				if(name == null)
+				if (name == null)
 					return;
-				try
-				{
-					m_propertyURL.setText(TextUtils.notNullString(new URL(name)));
-				}
-				catch(MalformedURLException e)
-				{
-					try
-					{
-						m_propertyURL.setText(TextUtils.notNullString(new File(name).toURI().toURL()));
-					}
-					catch(MalformedURLException e1)
-					{
+				try {
+					propertyURL.setText(TextUtils.notNullString(new URL(name)));
+				} catch (MalformedURLException e) {
+					try {
+						propertyURL.setText(TextUtils.notNullString(new File(name).toURI().toURL()));
+					} catch (MalformedURLException e1) {
 					}
 				}
 			}
 		});
 
-		m_propertyURLCheckbox.addSelectionListener(new CheckboxSelectionListener(new Control[] { label, m_propertyURL,
-				browseButton }));
+		propertyURLCheckbox.addSelectionListener(new CheckboxSelectionListener(new Control[] { label, propertyURL, browseButton }));
 
 		Group rmapGroup = new Group(tabComposite, SWT.NO_RADIO_GROUP);
 		rmapGroup.setText(Messages.resource_map);
@@ -1337,25 +1200,21 @@ public class QueryEditor extends EditorPart implements IEditorMatchingStrategy
 		rmapGroup.setLayout(layout);
 		rmapGroup.setLayoutData(new GridData(GridData.FILL, GridData.FILL, true, false));
 
-		m_requestURLCheckbox = UiUtils.createCheckButton(rmapGroup, Messages.use_resource_map, new SelectionAdapter()
-		{
+		requestURLCheckbox = UiUtils.createCheckButton(rmapGroup, Messages.use_resource_map, new SelectionAdapter() {
 			@Override
-			public void widgetSelected(SelectionEvent e)
-			{
-				Button button = (Button)e.widget;
+			public void widgetSelected(SelectionEvent e) {
+				Button button = (Button) e.widget;
 
-				if(!button.getSelection())
-				{
-					m_requestURL.setText(""); //$NON-NLS-1$
+				if (!button.getSelection()) {
+					requestURL.setText(""); //$NON-NLS-1$
 				}
 			}
 		});
 		gridData = new GridData(SWT.BEGINNING, SWT.CENTER, false, false);
 		gridData.horizontalSpan = 2;
-		m_requestURLCheckbox.setLayoutData(gridData);
+		requestURLCheckbox.setLayoutData(gridData);
 
-		label = UiUtils.createGridLabel(rmapGroup, Messages.rmap_url_with_colon, 1,
-				labelWidth - layout.marginWidth - 3, SWT.NONE);
+		label = UiUtils.createGridLabel(rmapGroup, Messages.rmap_url_with_colon, 1, labelWidth - layout.marginWidth - 3, SWT.NONE);
 
 		Composite rmapComposite = new Composite(rmapGroup, SWT.NONE);
 
@@ -1364,76 +1223,64 @@ public class QueryEditor extends EditorPart implements IEditorMatchingStrategy
 		rmapComposite.setLayout(layout);
 		rmapComposite.setLayoutData(new GridData(GridData.FILL, GridData.FILL, true, false));
 
-		m_requestURL = UiUtils.createGridText(rmapComposite, 1, 0, SWT.NONE, m_compoundModifyListener);
+		requestURL = UiUtils.createGridText(rmapComposite, 1, 0, SWT.NONE, compoundModifyListener);
 		browseButton = new Button(rmapComposite, SWT.PUSH);
 		browseButton.setLayoutData(new GridData(SWT.FILL, SWT.FILL, false, false));
 		browseButton.setText(Messages.browse_with_dots);
-		browseButton.addSelectionListener(new SelectionAdapter()
-		{
+		browseButton.addSelectionListener(new SelectionAdapter() {
 			@Override
-			public void widgetSelected(SelectionEvent se)
-			{
+			public void widgetSelected(SelectionEvent se) {
 				FileDialog dlg = new FileDialog(getSite().getShell());
 				dlg.setFilterExtensions(new String[] { "*.rmap" }); //$NON-NLS-1$
 				String name = dlg.open();
-				if(name == null)
+				if (name == null)
 					return;
-				try
-				{
-					m_requestURL.setText(TextUtils.notNullString(new URL(name)));
-				}
-				catch(MalformedURLException e)
-				{
-					try
-					{
-						m_requestURL.setText(TextUtils.notNullString(new File(name).toURI().toURL()));
-					}
-					catch(MalformedURLException e1)
-					{
+				try {
+					requestURL.setText(TextUtils.notNullString(new URL(name)));
+				} catch (MalformedURLException e) {
+					try {
+						requestURL.setText(TextUtils.notNullString(new File(name).toURI().toURL()));
+					} catch (MalformedURLException e1) {
 					}
 				}
 			}
 		});
 
-		m_requestURLCheckbox.addSelectionListener(new CheckboxSelectionListener(new Control[] { label, m_requestURL,
-				browseButton }));
+		requestURLCheckbox.addSelectionListener(new CheckboxSelectionListener(new Control[] { label, requestURL, browseButton }));
 
 		return EditorUtils.getOptimizedControl(tabComposite);
 	}
 
-	private Control getPropertiesTabControl(Composite parent)
-	{
+	private Control getPropertiesTabControl(Composite parent) {
 		Composite tabComposite = EditorUtils.getNamedTabComposite(parent, Messages.properties);
 
 		/*
-		 * Group propertiesGroup = new Group(tabComposite, SWT.NONE); propertiesGroup.setText("Properties"); GridLayout
-		 * layout = new GridLayout(1, false); propertiesGroup.setLayout(layout); propertiesGroup.setLayoutData(new
-		 * GridData(GridData.FILL, GridData.FILL, true, true));
+		 * Group propertiesGroup = new Group(tabComposite, SWT.NONE);
+		 * propertiesGroup.setText("Properties"); GridLayout layout = new
+		 * GridLayout(1, false); propertiesGroup.setLayout(layout);
+		 * propertiesGroup.setLayoutData(new GridData(GridData.FILL,
+		 * GridData.FILL, true, true));
 		 * 
-		 * m_properties = UiUtils.createNoBorderGridText(propertiesGroup, 1, 0, compoundModifyListener, SWT.MULTI);
-		 * m_properties.setLayoutData(new GridData(SWT.FILL, SWT.FILL, true, true));
+		 * properties = UiUtils.createNoBorderGridText(propertiesGroup, 1, 0,
+		 * compoundModifyListener, SWT.MULTI); properties.setLayoutData(new
+		 * GridData(SWT.FILL, SWT.FILL, true, true));
 		 */
-		m_properties = new Properties(tabComposite, SWT.NONE);
-		m_properties.addPropertiesModifyListener(m_compoundModifyListener);
+		properties = new Properties(tabComposite, SWT.NONE);
+		properties.addPropertiesModifyListener(compoundModifyListener);
 
 		return EditorUtils.getOptimizedControl(tabComposite);
 	}
 
-	private AdvisorNodeBuilder getSelectedNode()
-	{
-		int idx = m_nodeTable.getTable().getSelectionIndex();
-		return idx >= 0
-				? (AdvisorNodeBuilder)m_nodeTable.getElementAt(idx)
-				: null;
+	private AdvisorNodeBuilder getSelectedNode() {
+		int idx = nodeTable.getTable().getSelectionIndex();
+		return idx >= 0 ? (AdvisorNodeBuilder) nodeTable.getElementAt(idx) : null;
 	}
 
-	private int getSelectionIndex()
-	{
-		return m_nodeTable.getTable().getSelectionIndex();
+	private int getSelectionIndex() {
+		return nodeTable.getTable().getSelectionIndex();
 	}
 
-	private Control getXMLTabControl(Composite parent)
-	{
+	private Control getXMLTabControl(Composite parent) {
 		Composite tabComposite = EditorUtils.getNamedTabComposite(parent, Messages.xml_content);
 
 		Composite xmlComposite = new Composite(tabComposite, SWT.NONE);
@@ -1442,40 +1289,32 @@ public class QueryEditor extends EditorPart implements IEditorMatchingStrategy
 		xmlComposite.setLayout(layout);
 		xmlComposite.setLayoutData(new GridData(SWT.FILL, SWT.FILL, true, true));
 
-		m_xml = UiUtils.createGridText(xmlComposite, 1, 0, SWT.MULTI | SWT.V_SCROLL | SWT.H_SCROLL | SWT.READ_ONLY,
-				null);
-		m_xml.setLayoutData(new GridData(SWT.FILL, SWT.FILL, true, true));
+		xml = UiUtils.createGridText(xmlComposite, 1, 0, SWT.MULTI | SWT.V_SCROLL | SWT.H_SCROLL | SWT.READ_ONLY, null);
+		xml.setLayoutData(new GridData(SWT.FILL, SWT.FILL, true, true));
 
 		return EditorUtils.getOptimizedControl(tabComposite);
 	}
 
-	private void initStackControl()
-	{
-		m_nodeTree.setSelection(m_nodeTree.getItem(0));
-		m_nodesStackLayout.topControl = m_nodesHash.get(m_nodeTree.getItem(0).getText());
-		m_nodesStackComposite.layout();
+	private void initStackControl() {
+		nodeTree.setSelection(nodeTree.getItem(0));
+		nodesStackLayout.topControl = nodesHash.get(nodeTree.getItem(0).getText());
+		nodesStackComposite.layout();
 	}
 
-	private void loadComponent(boolean materialize)
-	{
-		if(!commitChangesToQuery())
+	private void loadComponent(boolean materialize) {
+		if (!commitChangesToQuery())
 			return;
 
-		try
-		{
-			ResolveJob resolveJob = new ResolveJob(m_componentQuery.createComponentQuery(), materialize, getSite(),
-					m_continueOnError);
+		try {
+			ResolveJob resolveJob = new ResolveJob(componentQuery.createComponentQuery(), materialize, getSite(), continueOnError);
 			resolveJob.schedule();
-		}
-		catch(CoreException e)
-		{
+		} catch (CoreException e) {
 			ErrorDialog.openError(getSite().getShell(), null, null, e.getStatus());
 		}
 	}
 
-	private void newNode()
-	{
-		if(!saveLastNode())
+	private void newNode() {
+		if (!saveLastNode())
 			return;
 
 		AdvisorNodeBuilder node = addEmptyNode();
@@ -1487,331 +1326,268 @@ public class QueryEditor extends EditorPart implements IEditorMatchingStrategy
 		nodeSelectionEvent();
 	}
 
-	private void nodeSelectionEvent()
-	{
+	private void nodeSelectionEvent() {
 		updateLastNode();
 		refreshNodeFields();
 		enableDisableButtonGroup();
 		initStackControl();
-		m_namePattern.setFocus();
+		namePattern.setFocus();
 	}
 
-	private void refreshList()
-	{
-		m_nodeTable.setInput(m_componentQuery.getAdvisoryNodes());
+	private void refreshList() {
+		nodeTable.setInput(componentQuery.getAdvisoryNodes());
 	}
 
-	private void refreshNodeFields()
-	{
-		try
-		{
-			m_suppressModifyListener = true;
+	private void refreshNodeFields() {
+		try {
+			suppressModifyListener = true;
 
 			AdvisorNodeBuilder node = getSelectedNode();
-			if(node == null)
+			if (node == null)
 				//
 				// Use an empty node as template to get the defaults right.
 				//
 				node = new AdvisorNodeBuilder();
 
-			m_allowCircular.setSelection(node.allowCircularDependency());
-			m_namePattern.setText(TextUtils.notNullString(node.getNamePattern()));
-			m_filter.setText(TextUtils.notNullString(node.getFilter()));
-			m_category.select(m_category.indexOf(TextUtils.notNullString(node.getComponentTypeID())));
-			m_overlayFolder.setText(TextUtils.notNullString(node.getOverlayFolder()));
-			m_wantedAttributes.setText(TextUtils.notNullString(TextUtils.concat(node.getAttributes(), ","))); //$NON-NLS-1$
-			m_prune.setSelection(node.isPrune());
-			m_mutableLevel.select(m_mutableLevel.indexOf(node.getMutableLevel().toString()));
-			m_sourceLevel.select(m_sourceLevel.indexOf(node.getSourceLevel().toString()));
-			m_skipComponent.setSelection(node.skipComponent());
-			m_useTargetPlatform.setSelection(node.isUseTargetPlatform());
-			m_useWorkspace.setSelection(node.isUseWorkspace());
-			m_useMaterialization.setSelection(node.isUseMaterialization());
-			m_useResolutionService.setSelection(node.isUseRemoteResolution());
+			allowCircular.setSelection(node.allowCircularDependency());
+			namePattern.setText(TextUtils.notNullString(node.getNamePattern()));
+			filter.setText(TextUtils.notNullString(node.getFilter()));
+			category.select(category.indexOf(TextUtils.notNullString(node.getComponentTypeID())));
+			overlayFolder.setText(TextUtils.notNullString(node.getOverlayFolder()));
+			wantedAttributes.setText(TextUtils.notNullString(TextUtils.concat(node.getAttributes(), ","))); //$NON-NLS-1$
+			prune.setSelection(node.isPrune());
+			mutableLevel.select(mutableLevel.indexOf(node.getMutableLevel().toString()));
+			sourceLevel.select(sourceLevel.indexOf(node.getSourceLevel().toString()));
+			skipComponent.setSelection(node.skipComponent());
+			useTargetPlatform.setSelection(node.isUseTargetPlatform());
+			useWorkspace.setSelection(node.isUseWorkspace());
+			useMaterialization.setSelection(node.isUseMaterialization());
+			useResolutionService.setSelection(node.isUseRemoteResolution());
 
-			m_branchTagPath.setText(TextUtils.notNullString(VersionSelector.toString(node.getBranchTagPath())));
-			m_revision.setText(TextUtils.notNullString(node.getRevision()));
-			Date timestamp = node.getTimestamp();
-			m_timestamp.setText(timestamp == null
-					? "" : m_timestampFormat.format(timestamp)); //$NON-NLS-1$
+			branchTagPath.setText(TextUtils.notNullString(VersionSelector.toString(node.getBranchTagPath())));
+			revision.setText(TextUtils.notNullString(node.getRevision()));
+			Date ts = node.getTimestamp();
+			timestamp.setText(ts == null ? "" : timestampFormat.format(ts)); //$NON-NLS-1$
 
 			VersionRange vs = node.getVersionOverride();
-			boolean enableOverride = (vs != null);
-			m_enableOverride.setSelection(enableOverride);
-			m_versionOverride.setEnabled(enableOverride);
-			m_versionOverride.refreshValues(vs);
+			boolean enableOverrideFlag = (vs != null);
+			enableOverride.setSelection(enableOverrideFlag);
+			versionOverride.setEnabled(enableOverrideFlag);
+			versionOverride.refreshValues(vs);
 
-			m_nodeProperties.setProperties(node.getProperties());
-			m_nodeProperties.refreshList();
+			nodeProperties.setProperties(node.getProperties());
+			nodeProperties.refreshList();
 
 			Documentation doc = node.getDocumentation();
-			m_nodeDocumentation.setText(TextUtils.notNullString(doc == null
-					? null
-					: doc.toString()));
-		}
-		finally
-		{
-			m_suppressModifyListener = false;
+			nodeDocumentation.setText(TextUtils.notNullString(doc == null ? null : doc.toString()));
+		} finally {
+			suppressModifyListener = false;
 		}
 	}
 
-	private void refreshQuery()
-	{
+	private void refreshQuery() {
 		setDirty(false);
-		m_mute = true;
-		try
-		{
-			ComponentRequest request = m_componentQuery.getRootRequest();
-			m_componentName.setText(TextUtils.notNullString(request.getName()));
-			m_componentType.select(m_componentType.indexOf(TextUtils.notNullString(request.getComponentTypeID())));
-			m_versionDesignator.refreshValues(request.getVersionRange());
+		mute = true;
+		try {
+			ComponentRequest request = componentQuery.getRootRequest();
+			componentName.setText(TextUtils.notNullString(request.getName()));
+			componentType.select(componentType.indexOf(TextUtils.notNullString(request.getComponentTypeID())));
+			versionDesignator.refreshValues(request.getVersionRange());
 
-			String string = TextUtils.notNullString(m_componentQuery.getPropertiesURL());
-			m_propertyURL.setText(string);
-			m_propertyURLCheckbox.setSelection(string.length() > 0);
-			m_propertyURLCheckbox.notifyListeners(SWT.Selection, new Event());
+			String string = TextUtils.notNullString(componentQuery.getPropertiesURL());
+			propertyURL.setText(string);
+			propertyURLCheckbox.setSelection(string.length() > 0);
+			propertyURLCheckbox.notifyListeners(SWT.Selection, new Event());
 
-			string = TextUtils.notNullString(m_componentQuery.getResourceMapURL());
-			m_requestURL.setText(string);
-			m_requestURLCheckbox.setSelection(string.length() > 0);
-			m_requestURLCheckbox.notifyListeners(SWT.Selection, new Event());
-			m_properties.setProperties(m_componentQuery.getDeclaredProperties());
-			m_shortDesc.setText(TextUtils.notNullString(m_componentQuery.getShortDesc()));
-			Documentation doc = m_componentQuery.getDocumentation();
-			m_documentation.setText(TextUtils.notNullString(doc == null
-					? "" //$NON-NLS-1$
+			string = TextUtils.notNullString(componentQuery.getResourceMapURL());
+			requestURL.setText(string);
+			requestURLCheckbox.setSelection(string.length() > 0);
+			requestURLCheckbox.notifyListeners(SWT.Selection, new Event());
+			properties.setProperties(componentQuery.getDeclaredProperties());
+			shortDesc.setText(TextUtils.notNullString(componentQuery.getShortDesc()));
+			Documentation doc = componentQuery.getDocumentation();
+			documentation.setText(TextUtils.notNullString(doc == null ? "" //$NON-NLS-1$
 					: doc.toString()));
 			refreshList();
-			m_properties.refreshList();
-			m_needsRefresh = false;
+			properties.refreshList();
+			needsRefresh = false;
 			nodeSelectionEvent();
-		}
-		finally
-		{
-			m_mute = false;
+		} finally {
+			mute = false;
 		}
 	}
 
-	private void removeNode()
-	{
+	private void removeNode() {
 		AdvisorNodeBuilder node = getSelectedNode();
-		if(node != null)
-		{
+		if (node != null) {
 			int last_idx = getSelectionIndex();
 
-			m_componentQuery.removeAdvisorNode(node);
+			componentQuery.removeAdvisorNode(node);
 			setDirty(true);
-			m_lastEditedNode = DONT_SAVE;
+			lastEditedNode = DONT_SAVE;
 			refreshList();
 
-			if(m_componentQuery.getAdvisoryNodes().size() > last_idx)
-			{
-				m_nodeTable.getTable().setSelection(last_idx);
-			}
-			else if(m_componentQuery.getAdvisoryNodes().size() > 0)
-			{
-				m_nodeTable.getTable().setSelection(last_idx - 1);
-			}
-			else
-			{
-				m_nodeTable.getTable().deselectAll();
+			if (componentQuery.getAdvisoryNodes().size() > last_idx) {
+				nodeTable.getTable().setSelection(last_idx);
+			} else if (componentQuery.getAdvisoryNodes().size() > 0) {
+				nodeTable.getTable().setSelection(last_idx - 1);
+			} else {
+				nodeTable.getTable().deselectAll();
 			}
 			nodeSelectionEvent();
 		}
 	}
 
-	private boolean saveLastNode()
-	{
+	private boolean saveLastNode() {
 		return saveLastNode(EMPTY_ACTIVATOR);
 	}
 
-	private boolean saveLastNode(IActivator failureActivator)
-	{
-		if(m_lastEditedNode != -1 && m_lastEditedNode != DONT_SAVE)
-			return saveNode(m_lastEditedNode, failureActivator);
+	private boolean saveLastNode(IActivator failureActivator) {
+		if (lastEditedNode != -1 && lastEditedNode != DONT_SAVE)
+			return saveNode(lastEditedNode, failureActivator);
 
 		return true;
 	}
 
-	private boolean saveNode(int nodeIdx, IActivator failureActivator)
-	{
-		AdvisorNodeBuilder node = (AdvisorNodeBuilder)m_nodeTable.getElementAt(nodeIdx);
+	private boolean saveNode(int nodeIdx, IActivator failureActivator) {
+		AdvisorNodeBuilder node = (AdvisorNodeBuilder) nodeTable.getElementAt(nodeIdx);
 		boolean isNewNode = false;
-		if(node == null)
-		{
+		if (node == null) {
 			node = new AdvisorNodeBuilder();
 			isNewNode = true;
 		}
 
 		boolean refreshListNeeded = false;
-		String patternStr = UiUtils.trimmedValue(m_namePattern);
-		String category = m_category.getItem(m_category.getSelectionIndex());
-		if(category.length() == 0)
-			category = null;
+		String patternStr = UiUtils.trimmedValue(namePattern);
+		String categoryStr = category.getItem(category.getSelectionIndex());
+		if (categoryStr.length() == 0)
+			categoryStr = null;
 
-		String filterStr = UiUtils.trimmedValue(m_filter);
-		if(patternStr == null && filterStr == null && category == null)
-		{
+		String filterStr = UiUtils.trimmedValue(filter);
+		if (patternStr == null && filterStr == null && categoryStr == null) {
 			failureActivator.activate();
-			MessageDialog.openError(getSite().getShell(), null,
-					Messages.name_pattern_component_type_or_filter_must_be_set);
+			MessageDialog.openError(getSite().getShell(), null, Messages.name_pattern_component_type_or_filter_must_be_set);
 			return false;
 		}
 
 		Pattern pattern = null;
-		if(patternStr != null)
-		{
-			try
-			{
+		if (patternStr != null) {
+			try {
 				pattern = Pattern.compile(patternStr);
-			}
-			catch(PatternSyntaxException e)
-			{
+			} catch (PatternSyntaxException e) {
 				failureActivator.activate();
 				MessageDialog.openError(getSite().getShell(), null, e.getMessage());
 				return false;
 			}
 		}
 
-		Filter filter = null;
-		if(filterStr != null)
-		{
-			try
-			{
-				filter = FilterFactory.newInstance(filterStr);
-			}
-			catch(InvalidSyntaxException e)
-			{
+		Filter nodeFilter = null;
+		if (filterStr != null) {
+			try {
+				nodeFilter = FilterFactory.newInstance(filterStr);
+			} catch (InvalidSyntaxException e) {
 				failureActivator.activate();
 				MessageDialog.openError(getSite().getShell(), null, e.getMessage());
 				return false;
 			}
 		}
 
-		if(!(Trivial.equalsAllowNull(pattern, node.getNamePattern())
-				&& Trivial.equalsAllowNull(category, node.getComponentTypeID()) && Trivial.equalsAllowNull(filter,
-				node.getFilter())))
-		{
+		if (!(Trivial.equalsAllowNull(pattern, node.getNamePattern()) && Trivial.equalsAllowNull(category, node.getComponentTypeID()) && Trivial
+				.equalsAllowNull(nodeFilter, node.getFilter()))) {
 			// Selection criteria changed. Verify that it's not a duplicate
 			//
-			AdvisorNodeBuilder patternEqual = m_componentQuery.getNodeByCriteria(pattern, category, filter);
-			if(patternEqual != null)
-			{
+			AdvisorNodeBuilder patternEqual = componentQuery.getNodeByCriteria(pattern, categoryStr, nodeFilter);
+			if (patternEqual != null) {
 				failureActivator.activate();
-				if(!MessageDialog.openQuestion(getSite().getShell(), null,
-						Messages.overwrite_existing_node_with_same_criteria))
+				if (!MessageDialog.openQuestion(getSite().getShell(), null, Messages.overwrite_existing_node_with_same_criteria))
 					return false;
-				m_componentQuery.removeAdvisorNode(patternEqual);
+				componentQuery.removeAdvisorNode(patternEqual);
 			}
 			refreshListNeeded = true;
 		}
 		node.setNamePattern(pattern);
-		node.setFilter(filter);
-		node.setComponentTypeID(category);
-		node.setAllowCircularDependency(m_allowCircular.getSelection());
+		node.setFilter(nodeFilter);
+		node.setComponentTypeID(categoryStr);
+		node.setAllowCircularDependency(allowCircular.getSelection());
 
-		boolean override = m_enableOverride.getSelection();
-		VersionRange versionOverride = null;
-		if(override)
-			try
-			{
-				versionOverride = m_versionOverride.getDirectVersionDesignator();
-			}
-			catch(CoreException e1)
-			{
+		boolean override = enableOverride.getSelection();
+		VersionRange versionOverrideRange = null;
+		if (override)
+			try {
+				versionOverrideRange = versionOverride.getDirectVersionDesignator();
+			} catch (CoreException e1) {
 				failureActivator.activate();
 				ErrorDialog.openError(getSite().getShell(), null, null, e1.getStatus());
 				return false;
 			}
 
-		try
-		{
-			String tmp = UiUtils.trimmedValue(m_overlayFolder);
-			node.setOverlayFolder(tmp == null
-					? null
-					: URLUtils.normalizeToURL(tmp));
-		}
-		catch(Exception e)
-		{
+		try {
+			String tmp = UiUtils.trimmedValue(overlayFolder);
+			node.setOverlayFolder(tmp == null ? null : URLUtils.normalizeToURL(tmp));
+		} catch (Exception e) {
 			failureActivator.activate();
 			MessageDialog.openError(getSite().getShell(), null, e.getMessage());
 			return false;
 		}
 
-		node.setSkipComponent(m_skipComponent.getSelection());
+		node.setSkipComponent(skipComponent.getSelection());
 
 		node.getAttributes().clear();
-		String tmp = UiUtils.trimmedValue(m_wantedAttributes);
-		if(tmp != null)
-			for(String attribute : tmp.split(",")) //$NON-NLS-1$
+		String tmp = UiUtils.trimmedValue(wantedAttributes);
+		if (tmp != null)
+			for (String attribute : tmp.split(",")) //$NON-NLS-1$
 				node.addAttribute(attribute);
-		node.setPrune(m_prune.getSelection());
+		node.setPrune(prune.getSelection());
 
-		int idx = m_mutableLevel.getSelectionIndex();
-		node.setMutableLevel(idx >= 0
-				? MutableLevel.values()[idx]
-				: null);
+		int idx = mutableLevel.getSelectionIndex();
+		node.setMutableLevel(idx >= 0 ? MutableLevel.values()[idx] : null);
 
-		idx = m_sourceLevel.getSelectionIndex();
-		node.setSourceLevel(idx >= 0
-				? SourceLevel.values()[idx]
-				: null);
+		idx = sourceLevel.getSelectionIndex();
+		node.setSourceLevel(idx >= 0 ? SourceLevel.values()[idx] : null);
 
-		node.setUseTargetPlatform(m_useTargetPlatform.getSelection());
-		node.setUseWorkspace(m_useWorkspace.getSelection());
-		node.setUseMaterialization(m_useMaterialization.getSelection());
-		node.setUseRemoteResolution(m_useResolutionService.getSelection());
+		node.setUseTargetPlatform(useTargetPlatform.getSelection());
+		node.setUseWorkspace(useWorkspace.getSelection());
+		node.setUseMaterialization(useMaterialization.getSelection());
+		node.setUseRemoteResolution(useResolutionService.getSelection());
 
-		node.setBranchTagPath(VersionSelector.fromPath(UiUtils.trimmedValue(m_branchTagPath)));
+		node.setBranchTagPath(VersionSelector.fromPath(UiUtils.trimmedValue(branchTagPath)));
 
-		node.setRevision(UiUtils.trimmedValue(m_revision));
+		node.setRevision(UiUtils.trimmedValue(revision));
 
-		tmp = UiUtils.trimmedValue(m_timestamp);
-		if(tmp != null)
-		{
-			try
-			{
-				node.setTimestamp(m_timestampFormat.parse(tmp));
-			}
-			catch(ParseException e)
-			{
+		tmp = UiUtils.trimmedValue(timestamp);
+		if (tmp != null) {
+			try {
+				node.setTimestamp(timestampFormat.parse(tmp));
+			} catch (ParseException e) {
 				failureActivator.activate();
-				MessageDialog.openError(getSite().getShell(), null,
-						Messages.timestamp_must_conform_to_format_with_colon + m_timestampFormat.toPattern());
+				MessageDialog.openError(getSite().getShell(), null, Messages.timestamp_must_conform_to_format_with_colon
+						+ timestampFormat.toPattern());
 				return false;
 			}
-		}
-		else
+		} else
 			node.setTimestamp(null);
 
-		node.setVersionOverride(versionOverride);
+		node.setVersionOverride(versionOverrideRange);
 
-		m_nodeProperties.fillProperties(node.getProperties());
+		nodeProperties.fillProperties(node.getProperties());
 
-		String doc = UiUtils.trimmedValue(m_nodeDocumentation);
+		String doc = UiUtils.trimmedValue(nodeDocumentation);
 
-		try
-		{
-			node.setDocumentation(doc == null
-					? null
-					: Documentation.parse(doc));
-		}
-		catch(Exception e)
-		{
+		try {
+			node.setDocumentation(doc == null ? null : Documentation.parse(doc));
+		} catch (Exception e) {
 			failureActivator.activate();
 			MessageDialog.openError(getSite().getShell(), null, e.getMessage());
 			return false;
 		}
 
-		if(isNewNode)
-		{
+		if (isNewNode) {
 			// This was an add operation
 			//
-			m_componentQuery.addAdvisorNode(node);
+			componentQuery.addAdvisorNode(node);
 			refreshListNeeded = true;
 		}
-		if(refreshListNeeded)
-		{
+		if (refreshListNeeded) {
 			refreshList();
 			nodeSelectionEvent();
 		}
@@ -1820,63 +1596,53 @@ public class QueryEditor extends EditorPart implements IEditorMatchingStrategy
 		return true;
 	}
 
-	private void saveToPath(IPath path)
-	{
-		try
-		{
-			SaveRunnable sr = new SaveRunnable(m_componentQuery.createComponentQuery(), path);
+	private void saveToPath(IPath path) {
+		try {
+			SaveRunnable sr = new SaveRunnable(componentQuery.createComponentQuery(), path);
 			getSite().getWorkbenchWindow().run(true, true, sr);
 			setInputWithNotify(sr.getSavedInput());
 			setDirty(false);
 			setPartName(path.lastSegment());
 			firePropertyChange(IWorkbenchPart.PROP_TITLE);
-		}
-		catch(InvocationTargetException e)
-		{
+		} catch (InvocationTargetException e) {
 			CoreException t = BuckminsterException.wrap(e);
 			String msg = Messages.unable_to_save_file_0 + path;
 			CorePlugin.getLogger().error(t, msg);
 			ErrorDialog.openError(getSite().getShell(), null, msg, t.getStatus());
-		}
-		catch(InterruptedException e)
-		{
+		} catch (InterruptedException e) {
 		}
 	}
 
-	private boolean selectRow(AdvisorNodeBuilder node)
-	{
-		int idx = m_componentQuery.getAdvisoryNodes().indexOf(node);
+	private boolean selectRow(AdvisorNodeBuilder node) {
+		int idx = componentQuery.getAdvisoryNodes().indexOf(node);
 
-		if(idx == -1)
+		if (idx == -1)
 			return false;
 
-		m_nodeTable.getTable().setSelection(idx);
+		nodeTable.getTable().setSelection(idx);
 
 		return true;
 	}
 
-	private void setDirty(boolean flag)
-	{
-		if(m_mute || m_hasChanges == flag)
+	private void setDirty(boolean flag) {
+		if (mute || hasChanges == flag)
 			return;
-		m_hasChanges = flag;
+		hasChanges = flag;
 		firePropertyChange(PROP_DIRTY);
 	}
 
-	private void swapAndReselect(int idxOffset, int selectionOffset)
-	{
-		if(!saveLastNode())
-		{
+	private void swapAndReselect(int idxOffset, int selectionOffset) {
+		if (!saveLastNode()) {
 			return;
 		}
 
-		Table table = m_nodeTable.getTable();
+		Table table = nodeTable.getTable();
 		int idx = table.getSelectionIndex() + idxOffset;
-		if(idx <= 0)
+		if (idx <= 0)
 			return;
 
-		List<AdvisorNodeBuilder> nl = m_componentQuery.getAdvisoryNodes();
-		if(idx >= nl.size())
+		List<AdvisorNodeBuilder> nl = componentQuery.getAdvisoryNodes();
+		if (idx >= nl.size())
 			return;
 
 		nl.set(idx - 1, nl.set(idx, nl.get(idx - 1)));
@@ -1886,13 +1652,11 @@ public class QueryEditor extends EditorPart implements IEditorMatchingStrategy
 		setDirty(true);
 	}
 
-	private void updateLastNode()
-	{
-		if(getSelectionIndex() != -1)
-		{
-			m_lastSelectedNode = getSelectionIndex();
+	private void updateLastNode() {
+		if (getSelectionIndex() != -1) {
+			lastSelectedNode = getSelectionIndex();
 		}
 
-		m_lastEditedNode = getSelectionIndex();
+		lastEditedNode = getSelectionIndex();
 	}
 }
